updated project links

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
       </div>
 
       <div class="project btn">
-        <a target="_blank" href="projects/MMC/index.html">
+        <a
+          target="_blank"
+          href="https://cookiebyte4130.github.io/marysMercyCenter/"
+        >
           <img src="assets/mmcLogo.png" class="project_image" />
           <p class="project_title">Mary's Mercy Center</p>
           <p class="project_summary">
@@ -55,7 +58,7 @@
       </div>
 
       <div class="project btn">
-        <a target="_blank" href="projects/PopQuiz/index.html">
+        <a target="_blank" href="https://cookiebyte4130.github.io/popQuiz/">
           <img src="assets/popQuiz.jpeg" class="project_image" />
           <p class="project_title">Pop Quiz</p>
           <p class="project_summary">
