added github link

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
           </p>
         </a>
       </div>
+
+      <p>
+        <a class="link" href="https://github.com/cookieByte4130" target="blank"
+          >Visit my github</a
+        >
+      </p>
     </section>
     <section id="about" class="primary-background">
       <h2>About</h2>
@@ -81,7 +87,7 @@
         Dedicated to creating a better world by participating in several
         organizations. Co-Facilitated several Alternative to Violence workshops.
         Participated in Canine Support Teams in training dogs for disabled.
-        Donated several original art pieces to various organizations that assist
+        Donated several original art pieces to various organizations assisting
         victims of Domestic Violence.
       </p>
     </section>
