made projects more responsive

--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
             src="https://i.pinimg.com/originals/8a/52/cd/8a52cd8b7355d3bf64679eaaa064e080.jpg"
             class="project_image"
           />
-          <p class="project_title">Dragon Worlds</p>
-          <p class="project_summary">
-            A single player DnD style client side app where you will battle to
-            collect all the runes and reunite the land
-          </p>
+          <div>
+            <p class="project_title">Dragon Worlds</p>
+            <p class="project_summary">
+              A single player DnD style client side app where you will battle to
+              collect all the runes and reunite the land
+            </p>
+          </div>
         </a>
       </div>
 
@@ -49,22 +51,26 @@
           href="https://cookiebyte4130.github.io/marysMercyCenter/"
         >
           <img src="assets/mmcLogo.png" class="project_image" />
-          <p class="project_title">Mary's Mercy Center</p>
-          <p class="project_summary">
-            An informational page for an NPO that assists people currently
-            experiencing homelessness in San Bernardino, CA.
-          </p>
+          <div>
+            <p class="project_title">Mary's Mercy Center</p>
+            <p class="project_summary">
+              An informational page for an NPO that assists people currently
+              experiencing homelessness in San Bernardino, CA.
+            </p>
+          </div>
         </a>
       </div>
 
       <div class="project btn">
         <a target="_blank" href="https://cookiebyte4130.github.io/popQuiz/">
           <img src="assets/popQuiz.jpeg" class="project_image" />
-          <p class="project_title">Pop Quiz</p>
-          <p class="project_summary">
-            A quick game app. Players have 20 seconds to answer as many
-            questions as they can.
-          </p>
+          <div>
+            <p class="project_title">Pop Quiz</p>
+            <p class="project_summary">
+              A quick game app. Players have 20 seconds to answer as many
+              questions as they can.
+            </p>
+          </div>
         </a>
       </div>
 
